--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,1 +1,4 @@
-driver=com.dingli.jdbc.OracleJdbc
+driver=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://127.0.0.1:3306/hbnu?serverTimezone=GMT&useSSL=false&characterEncoding=utf-8
+user=root
+password=chendikai
